GitVersion1/objects/Survey_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>sc_Is_Self_Mixing_Answers__c</fullName>
        <defaultValue>&quot;&gt;&quot;</defaultValue>
        <inlineHelpText>Czy hodowca posiada zasoby, aby samodzielnie mieszać paszę z premiksów (sam produkuje pasze pełnop.)?
Bydło - chodzi o produkcję w gospod. w mieszalniku (nie wozie paszowym) mieszanki składającej się ze zbóż, śrut białkowych czy innych źródeł białka.</inlineHelpText>
        <label>Is self mixing?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Price_Management_Answers__c</fullName>
        <defaultValue>&quot;&gt;&quot;</defaultValue>
        <inlineHelpText>W jaki sposób hodowca zarządza ceną sprzedaży? (nie dotyczy bydła - w przypadku kolegów / koleżanek z działu bydlęcego proszę zaznaczyć I opcję - cała sprzedaż zakontraktowana)</inlineHelpText>
        <label>How manage selling price (excl. dairy)?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Via_Dealer_Answers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does buy via Dealer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_Want_To_Invest_Answers__c</fullName>
        <defaultValue>&quot;&gt;&quot;</defaultValue>
        <inlineHelpText>Czy hodowca wyraża chęć rozwoju i inwestowania w swój biznes?</inlineHelpText>
        <label>Does want to invest?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>val_PoultryCGL_Sales__c</fullName>
        <label>Poultry Sales CGL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>val_Poultry_Sales__c</fullName>
        <label>Poultry Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>var_BaxterPOS_2_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has from 2 to 3 POS&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Segmentation</label>
    <listViews>
        <fullName>All_Direct</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Account_Name__c</columns>
        <columns>Segm_9Box__c</columns>
        <columns>Segm_9Box_recomm__c</columns>
        <columns>sc_Advisory_Needed_Answers__c</columns>
        <columns>Is_Self_Mixing_Yes__c</columns>
        <columns>Is_Self_Mixing_Partially__c</columns>
        <columns>Is_Self_Mixing_No__c</columns>
        <columns>sc_Via_Dealer_Answers__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Created_by_User_role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType__c</field>
            <operation>equals</operation>
            <value>Direct</value>
        </filters>
        <label>All Direct (all CFN)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Distribution</fullName>
        <columns>NAME</columns>
        <columns>Related_Account_Name__c</columns>
        <columns>Segm_9Box__c</columns>
        <columns>Segm_Y_Axis__c</columns>
        <columns>Total_Share_of_Wallet__c</columns>
        <columns>Total_Feed_Sales__c</columns>
        <columns>Total_Cargill_Sales__c</columns>
        <columns>Total_Competitor_Sales__c</columns>
        <columns>Poultry_Share_of_Wallet__c</columns>
        <columns>Pork_Share_of_Wallet__c</columns>
        <columns>Dairy_Share_of_Wallet__c</columns>
        <columns>Pet_Foot_Share_of_Wallet__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Created_by_User_role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType__c</field>
            <operation>equals</operation>
            <value>Distribution</value>
        </filters>
        <label>All Dystrybucja (all CFN)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Distribution_NC</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Related_Account_Name__c</columns>
        <columns>Segm_9Box__c</columns>
        <columns>Segm_Y_Axis__c</columns>
        <columns>Total_Share_of_Wallet__c</columns>
        <columns>Total_Feed_Sales__c</columns>
        <columns>Total_Cargill_Sales__c</columns>
        <columns>Total_Competitor_Sales__c</columns>
        <columns>Poultry_Share_of_Wallet__c</columns>
        <columns>Pork_Share_of_Wallet__c</columns>
        <columns>Dairy_Share_of_Wallet__c</columns>
        <columns>Pet_Foot_Share_of_Wallet__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Created_by_User_role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType__c</field>
            <operation>equals</operation>
            <value>Distribution</value>
        </filters>
        <filters>
            <field>Segm_Y_Axis__c</field>
            <operation>equals</operation>
            <value>Not Classified</value>
        </filters>
        <filters>
            <field>Segm_9Box__c</field>
            <operation>contains</operation>
            <value>error</value>
        </filters>
        <label>All Dystrybucja (all CFN) Not Classified</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Noah_Dairy_Team</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Related_Account_Name__c</columns>
        <columns>sc_Advisory_Needed_Answers__c</columns>
        <columns>Is_Self_Mixing_Yes__c</columns>
        <columns>Is_Self_Mixing_Partially__c</columns>
        <columns>Is_Self_Mixing_No__c</columns>
        <columns>sc_Via_Dealer_Answers__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Created_by_User_role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_by_User_role__c</field>
            <operation>contains</operation>
            <value>rzeżuchowski</value>
        </filters>
        <label>All Noah Dairy Team</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Noah_Pork_Team</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Related_Account_Name__c</columns>
        <columns>sc_Advisory_Needed_Answers__c</columns>
        <columns>Is_Self_Mixing_Yes__c</columns>
        <columns>Is_Self_Mixing_Partially__c</columns>
        <columns>Is_Self_Mixing_No__c</columns>
        <columns>sc_Via_Dealer_Answers__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Created_by_User_role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>gradowska,rosiński,zając,chajewski,twardowski</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>gradowsk,ausfe</value>
        </filters>
        <label>All Noah Pork Team</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Related_Account_Name__c</columns>
        <columns>Segm_9Box_recomm__c</columns>
        <columns>Segm_9Box__c</columns>
        <columns>sc_Advisory_Needed_Answers__c</columns>
        <columns>Is_Self_Mixing_Yes__c</columns>
        <columns>Is_Self_Mixing_Partially__c</columns>
        <columns>Is_Self_Mixing_No__c</columns>
        <columns>sc_Via_Dealer_Answers__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Created_by_User_role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Surveys</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_is_mixing</fullName>
        <columns>NAME</columns>
        <columns>Related_Account_Name__c</columns>
        <columns>sc_Advisory_Needed_Answers__c</columns>
        <columns>Is_Self_Mixing_Yes__c</columns>
        <columns>Is_Self_Mixing_Partially__c</columns>
        <columns>Is_Self_Mixing_No__c</columns>
        <columns>sc_Via_Dealer_Answers__c</columns>
        <columns>Open_For_Changes_Yes_E__c</columns>
        <columns>Open_For_Changes_Med_S__c</columns>
        <columns>Open_For_Changes_No_L__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Created_by_User_role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Self_Mixing_Yes__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All (all CFN) miesza premiksy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_my_survey</fullName>
        <columns>NAME</columns>
        <columns>Related_Account_Name__c</columns>
        <columns>Segm_9Box_recomm__c</columns>
        <columns>Segm_9Box__c</columns>
        <columns>sc_Advisory_Needed_Answers__c</columns>
        <columns>Is_Self_Mixing_Yes__c</columns>
        <columns>Is_Self_Mixing_Partially__c</columns>
        <columns>Is_Self_Mixing_No__c</columns>
        <columns>sc_Via_Dealer_Answers__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Created_by_User_role__c</columns>
        <filterScope>Mine</filterScope>
        <label>All (My Survey)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_my_survey_no_advisory</fullName>
        <columns>NAME</columns>
        <columns>Related_Account_Name__c</columns>
        <columns>sc_Advisory_Needed_Answers__c</columns>
        <columns>Is_Self_Mixing_Yes__c</columns>
        <columns>Is_Self_Mixing_Partially__c</columns>
        <columns>Is_Self_Mixing_No__c</columns>
        <columns>sc_Via_Dealer_Answers__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Created_by_User_role__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>sc_Advisory_Needed_Answers__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All (My Survey) nie potrzebuje doradztwa</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_no_advisory</fullName>
        <columns>NAME</columns>
        <columns>Related_Account_Name__c</columns>
        <columns>sc_Advisory_Needed_Answers__c</columns>
        <columns>Is_Self_Mixing_Yes__c</columns>
        <columns>Is_Self_Mixing_Partially__c</columns>
        <columns>Is_Self_Mixing_No__c</columns>
        <columns>sc_Via_Dealer_Answers__c</columns>
        <columns>Open_For_Changes_Yes_E__c</columns>
        <columns>Open_For_Changes_Med_S__c</columns>
        <columns>Open_For_Changes_No_L__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Created_by_User_role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sc_Advisory_Needed_Answers__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All (all CFN) nie potrzebuje doradztwa</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_specific</fullName>
        <columns>NAME</columns>
        <columns>Related_Account_Name__c</columns>
        <columns>Segm_9Box__c</columns>
        <columns>sc_Advisory_Needed_Answers__c</columns>
        <columns>Is_Self_Mixing_Yes__c</columns>
        <columns>Is_Self_Mixing_Partially__c</columns>
        <columns>Is_Self_Mixing_No__c</columns>
        <columns>sc_Via_Dealer_Answers__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Created_by_User_role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Account_Name__c</field>
            <operation>contains</operation>
            <value>Żurada</value>
        </filters>
        <label>All (all CFN) specific</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Survey-{000000}</displayFormat>
        <label>Survey Segmentation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Segmentations</pluralLabel>
    <recordTypes>
        <fullName>Direct</fullName>
        <active>true</active>
        <description>For Noah</description>
        <label>Direct</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution</fullName>
        <active>true</active>
        <description>For Baxter, Dennis</description>
        <label>Distribution</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Does_analyze_costs</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
AND(sc_Advisory_Needed_Answers__c, NOT(Is_Self_Mixing_Yes__c), 
IF 
( 
( 
IF(Is_Cost_Analyst_Yes_E__c=TRUE,1,0) + 
IF(Is_Cost_Analyst_Med_S__c=TRUE,1,0) + 
IF(Is_Cost_Analyst_No_L__c=TRUE,1,0) 
) 
&lt;&gt;1,TRUE,FALSE) 
),
 ( AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;Data Steward&quot;,$Profile.Name &lt;&gt; &quot;Polish Data Steward&quot;,$Profile.Name &lt;&gt; &quot;Polish Data Steward | Log user&quot;,RecordType.DeveloperName&lt;&gt;&quot;Distribution&quot; ) )
 )</errorConditionFormula>
        <errorDisplayField>Is_Cost_Analyst_Yes_E__c</errorDisplayField>
        <errorMessage>Zaznacz jedną z trzech odpowiedzi czy hodowca analizuje szczegółowo koszty (przynajmniej jedną i nie więcej niż jedną odpowiedź).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Does_want_to_invest</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
AND(sc_Advisory_Needed_Answers__c, NOT(Is_Self_Mixing_Yes__c), 
IF 
( 
( 
IF(Want_To_Invest_Yes_E__c=TRUE,1,0) + 
IF(Want_To_Invest_Med_S__c=TRUE,1,0) + 
IF(Want_To_Invest_No_L__c=TRUE,1,0) 
) 
&lt;&gt;1,TRUE,FALSE) 
)
, 
( AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;Data Steward&quot;,$Profile.Name &lt;&gt; &quot;Polish Data Steward&quot;,$Profile.Name &lt;&gt; &quot;Polish Data Steward | Log user&quot;,RecordType.DeveloperName&lt;&gt;&quot;Distribution&quot;  ) ) 
)</errorConditionFormula>
        <errorDisplayField>Want_To_Invest_Yes_E__c</errorDisplayField>
        <errorMessage>Zaznacz jedną z trzech odpowiedzi czy hodowca wyraża chęć rozwoju i inwestowania w swój biznes (przynajmniej jedną i nie więcej niż jedną odpowiedź).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_open_for_changes</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
AND(sc_Advisory_Needed_Answers__c, NOT(Is_Self_Mixing_Yes__c), 
IF 
( 
( 
IF(Open_For_Changes_Yes_E__c=TRUE,1,0) + 
IF(Open_For_Changes_Med_S__c=TRUE,1,0) + 
IF(Open_For_Changes_No_L__c=TRUE,1,0) 
) 
&lt;&gt;1,TRUE,FALSE) 
)
, 
( AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;Data Steward&quot;,$Profile.Name &lt;&gt; &quot;Polish Data Steward&quot;,$Profile.Name &lt;&gt; &quot;Polish Data Steward | Log user&quot;, RecordType.DeveloperName&lt;&gt;&quot;Distribution&quot;  ) ) 
)</errorConditionFormula>
        <errorDisplayField>Open_For_Changes_Yes_E__c</errorDisplayField>
        <errorMessage>Zaznacz jedną z trzech odpowiedzi czy hodowca jest otwarty za zmiany (przynajmniej jedną i nie więcej niż jedną odpowiedź).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_self_mixing</fullName>
        <active>true</active>
        <description>If need advisory the user must answer on Is self mixing question</description>
        <errorConditionFormula>AND
(
AND(sc_Advisory_Needed_Answers__c, 
IF 
( 
( 
IF(Is_Self_Mixing_Yes__c=TRUE,1,0) + 
IF(Is_Self_Mixing_Partially__c=TRUE,1,0) + 
IF(Is_Self_Mixing_No__c=TRUE,1,0) 
) 
&lt;&gt;1,TRUE,FALSE) 
)
, 
( AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;Data Steward&quot;,$Profile.Name &lt;&gt; &quot;Polish Data Steward&quot;,$Profile.Name &lt;&gt; &quot;Polish Data Steward | Log user&quot;, RecordType.DeveloperName&lt;&gt;&quot;Distribution&quot;  ) ) 
)</errorConditionFormula>
        <errorDisplayField>Is_Self_Mixing_Yes__c</errorDisplayField>
        <errorMessage>Zaznacz jedną z trzech odpowiedzi czy hodowca może samodzielnie mieszać paszę z premiksów (przynajmniej jedną i nie więcej niż jedną odpowiedź).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Manage_selling_price</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
AND(sc_Advisory_Needed_Answers__c, NOT(Is_Self_Mixing_Yes__c), 
IF 
( 
( 
IF(Price_Management_Yes_E__c=TRUE,1,0) + 
IF(Price_Management_Med_S__c=TRUE,1,0) + 
IF(Price_Management_No_L__c=TRUE,1,0) 
) 
&lt;&gt;1,TRUE,FALSE) 
)
, 
( AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;Data Steward&quot;,$Profile.Name &lt;&gt; &quot;Polish Data Steward&quot;,$Profile.Name &lt;&gt; &quot;Polish Data Steward | Log user&quot;, RecordType.DeveloperName&lt;&gt;&quot;Distribution&quot;  ) ) 
)</errorConditionFormula>
        <errorDisplayField>Price_Management_Yes_E__c</errorDisplayField>
        <errorMessage>Zaznacz jedną z trzech odpowiedzi w jaki sposób hodowca zarządza ceną sprzedaży (przynajmniej jedną i nie więcej niż jedną odpowiedź).</errorMessage>
    </validationRules>
</CustomObject>